Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticImport/StaticImport2.out
StaticImport2.java:24:17: compiler.err.ref.ambiguous: K, kindname.variable, K, p.B, kindname.variable, K, p.A
1 error
